module-04-scaling-networking/k8s/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  labels:
    app: sentinel
    component: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentinel
      component: dashboard
  template:
    metadata:
      labels:
        app: sentinel
        component: dashboard
    spec:
      containers:
      - name: dashboard
        image: sentinel-dashboard:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
spec:
  selector:
    app: sentinel
    component: dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
